# magicline

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
examples/: tmux-v1.conf  tmux.conf  zshrc
share/: tmux-v1.conf  tmux.conf  zshrc
src/: host_utils.h  project_defines.h.in  time_utils.h  tmux_prompt.c  tmux_prompt.cpp  zsh_prompt.cpp
util/travis/: script.sh
